--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,11 @@
-html,
-body {
-  padding: 0;
+*, *::before, *::after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,body,#__next {
+  height: 100%;
 }
 
 a {
@@ -11,6 +13,10 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+body {
+  background-color: var(--color-base-bg);
+  font-size: 16px;
+  color: var(--color-base-text);
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
